overflow fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 .wrapper {
   height: 100vh;
   background: url('./pictures/polka_dots.png');
-  overflow: auto;
   display: grid;
   grid-template-rows: 2fr 1fr 100fr 1fr;
+  grid-row-gap: 10px;
   justify-content: center;
+  .main {
+    overflow: auto;
+  }
 }
